---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/default_config/prompt.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# If the config file doesn't exist, we prompt and then create it
echo "" | sui client --client.config ./client.yaml envs \
  | sed 's/Generated new keypair.*$/Generated new keypair <REDACTED>/g'

sed 's/active_address:.*$/active_address: XXX/g' client.yaml

echo ""
echo "check for keystore:"
ls sui.keystore

----- results -----
success: true
exit_code: 0
----- stdout -----
No sui config found in `"./client.yaml"`, create one [Y/n]?
Generated new keypair <REDACTED>
  secret recovery phrase : [one profit jacket purpose uphold poet slot mystery auction scissors manual convince]
Created "./client.yaml"
Set active environment to testnet
╭─────────┬─────────────────────────────────────┬────────╮
│ alias   │ url                                 │ active │
├─────────┼─────────────────────────────────────┼────────┤
│ testnet │ https://fullnode.testnet.sui.io:443 │ *      │
│ mainnet │ https://fullnode.mainnet.sui.io:443 │        │
│ devnet  │ https://fullnode.devnet.sui.io:443  │        │
│ local   │ http://127.0.0.1:9000               │        │
╰─────────┴─────────────────────────────────────┴────────╯
---
keystore:
  File: "./sui.keystore"
external_keys: ~
envs:
  - alias: testnet
    rpc: "https://fullnode.testnet.sui.io:443"
    ws: ~
    basic_auth: ~
    chain_id: 4c78adac
  - alias: mainnet
    rpc: "https://fullnode.mainnet.sui.io:443"
    ws: ~
    basic_auth: ~
    chain_id: 35834a8a
  - alias: devnet
    rpc: "https://fullnode.devnet.sui.io:443"
    ws: ~
    basic_auth: ~
  - alias: local
    rpc: "http://127.0.0.1:9000"
    ws: ~
    basic_auth: ~
active_env: testnet
active_address: XXX

check for keystore:
sui.keystore

----- stderr -----
